--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Ddude88888/.m2/repository/org/spigotmc/spigot-api/1.8-R0.1-SNAPSHOT/spigot-api-1.8-R0.1-SNAPSHOT-shaded.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ddude88888/.m2/repository/org/spigotmc/spigot-api/1.8-R0.1-SNAPSHOT/TitleAPI.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ddude88888/Desktop/Old Desktop/server newest/spigot1.8.jar"/>
+	<classpathentry kind="lib" path="lib/spigot-api-1.8-R0.1-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="lib/spigot1.8.jar"/>
+	<classpathentry kind="lib" path="lib/TitleAPI.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
